<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_advanced_options"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spImageSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/textView2"
        android:entries="@array/image_size_array"
        android:gravity="right" />

    <Spinner
        android:id="@+id/spColorFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/spImageSize"
        android:layout_alignTop="@+id/textView3"
        android:entries="@array/image_color_array"
        android:gravity="right"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:gravity="center_vertical"
        android:text="@string/label_image_size" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:gravity="center_vertical"
        android:text="@string/label_color_filter" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:gravity="center_vertical"
        android:text="@string/label_image_type" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:gravity="center_vertical"
        android:text="@string/label_site_filter" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:text="Save" 
        android:onClick="onSave"/>

    <Spinner
        android:id="@+id/spImageType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/spColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView4" 
        android:entries="@array/image_type_array"/>

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spImageType"
        android:layout_alignTop="@+id/textView5"
        android:ems="10" 
        android:hint="yahoo.com">

        <requestFocus />
    </EditText>

</RelativeLayout>
